--- a/esp32_template/main/webpage/app.css
+++ b/esp32_template/main/webpage/app.css
@@ -37,6 +37,15 @@ h4 {
 	color: #1d3557;
 }	
 
+#temperature_reading{
+	display:inline;
+	color:#1d3557;
+}
+#humidity_reading{
+	display:inline;
+	color:#1d3557;
+}
+
 .buttons {
     padding: 5px;
 }
